[package]

name = "img_dup_iced"
version = "1.0.0"
authors = [ "Austin Bonander <austin.bonander@gmail.com>", "Thomas King <kingtomtom93@yahoo.fr>" ]
edition = '2021'

[features]

#gui = ["file_dialog", "pistoncore-sdl2_window", "conrod", "iced"]
#
#[dependencies.time]
#git = "https://github.com/rust-lang/time"
#
#[dependencies.img_hash]
##git = "https://github.com/cybergeek94/img_hash"
#
#[dependencies.file_dialog]
#git = "https://github.com/cybergeek94/file_dialog"
#optional = true
#
#[dependencies.conrod]
#git = "https://github.com/PistonDevelopers/conrod"
#optional = true
#
#[dependencies.pistoncore-sdl2_window]
#git = "https://github.com/PistonDevelopers/sdl2_window"
#optional = true
#
#[dependencies.iced]
#git = "https://github.com/iced-rs/iced.git"
#optional = true

[dependencies]
image = "0.24.6"
time = { version = "0.3.20", features = ["macros"] }
config = "0.13.3"
getopts = "0.2"
libc = "0.2.141"
rustc-serialize = "0.3.24"
img_hash = "3.2.0"
iced = "0.8.0"